AP-10375: Fix legend values being cut off
AP-10375 (Heatmap (JavaScript) negative values in legend not displayed correctly)

--- a/org.knime.js.views.labs/js-src/org/knime/js/base/node/viz/heatmap/styles.css
+++ b/org.knime.js.views.labs/js-src/org/knime/js/base/node/viz/heatmap/styles.css
@@ -163,7 +163,7 @@ form {
 .knime-legend {
     flex-grow: 0;
     flex-shrink: 0;
-    padding: 2px;
+    padding: 2px 10px;
 }
 
 .missing-value {
